--- a/package.json
+++ b/package.json
@@ -54,10 +54,12 @@
     "csv-parse": "4.4.5",
     "cz-lerna-changelog": "2.0.2",
     "documentation": "11.0.0",
-    "eslint": "5.16.0",
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb-base": "^14.0.0",
     "eslint-config-node": "4.0.0",
     "eslint-config-react-app": "^4.0.1",
     "eslint-plugin-flowtype": "^3.9.1",
+    "eslint-plugin-import": "^2.20.1",
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-react": "7.13.0",
     "eslint-plugin-react-hooks": "^1.6.0",
