--- a/package.json
+++ b/package.json
@@ -61,7 +61,7 @@
     "eslint-plugin-flowtype": "^3.9.1",
     "eslint-plugin-import": "^2.20.1",
     "eslint-plugin-jsx-a11y": "^6.2.1",
-    "eslint-plugin-react": "7.13.0",
+    "eslint-plugin-react": "^7.18.3",
     "eslint-plugin-react-hooks": "^1.6.0",
     "fs-extra": "8.0.1",
     "jest": "24.9.0",
