--- a/package.json
+++ b/package.json
@@ -45,43 +45,7 @@
     "check-deps": "sh scripts/check-deps-all.sh",
     "test-coverage:upload": "codecov"
   },
-  "devDependencies": {
-    "@feathersjs/socketio": "^4.3.2",
-    "@lerna/project": "^3.16.0",
-    "@shelf/jest-mongodb": "^1.1.3",
-    "codecov": "3.5.0",
-    "commitizen": "3.1.1",
-    "csv-parse": "4.4.5",
-    "cz-lerna-changelog": "2.0.2",
-    "documentation": "11.0.0",
-    "eslint": "^6.8.0",
-    "eslint-config-airbnb-base": "^14.0.0",
-    "eslint-config-node": "4.0.0",
-    "eslint-config-react-app": "^4.0.1",
-    "eslint-plugin-flowtype": "^3.9.1",
-    "eslint-plugin-import": "^2.20.1",
-    "eslint-plugin-jsx-a11y": "^6.2.1",
-    "eslint-plugin-react": "^7.18.3",
-    "eslint-plugin-react-hooks": "^1.6.0",
-    "fs-extra": "8.0.1",
-    "jest": "24.9.0",
-    "jest-cli": "24.9.0",
-    "jest-extended": "0.11.2",
-    "linklocal": "2.8.2",
-    "load-json-file": "6.0.0",
-    "mock-aws": "1.2.3",
-    "mockery": "2.1.0",
-    "nodecredstash": "2.0.2",
-    "npm-cli-login": "0.1.1",
-    "npm-registry-client": "^8.6.0",
-    "react": "^16.8.6",
-    "serverless-jest-plugin": "0.2.1",
-    "serverless-localstack": "0.4.19",
-    "serverless-plugin-include-dependencies": "3.2.1",
-    "socketio-jwt": "^4.5.0",
-    "weak": "1.0.1",
-    "yamljs": "0.3.0"
-  },
+  "devDependencies": {},
   "workspaces": [
     "packages/*",
     "services/*",
@@ -96,5 +60,40 @@
   "publishConfig": {
     "access": "restricted"
   },
-  "dependencies": {}
+  "dependencies": {
+    "@feathersjs/socketio": "^4.5.1",
+    "@lerna/project": "^3.18.0",
+    "@shelf/jest-mongodb": "^1.1.3",
+    "codecov": "^3.6.5",
+    "commitizen": "^4.0.3",
+    "csv-parse": "^4.8.5",
+    "cz-lerna-changelog": "^2.0.2",
+    "documentation": "^12.1.4",
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-config-node": "^4.0.0",
+    "eslint-config-react-app": "^5.2.0",
+    "eslint-plugin-flowtype": "^4.6.0",
+    "eslint-plugin-import": "^2.20.1",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-react": "^7.18.3",
+    "eslint-plugin-react-hooks": "^2.3.0",
+    "fs-extra": "^8.1.0",
+    "jest": "^25.1.0",
+    "jest-cli": "^25.1.0",
+    "jest-extended": "^0.11.5",
+    "linklocal": "^2.8.2",
+    "load-json-file": "^6.2.0",
+    "mock-aws": "^1.2.3",
+    "mockery": "^2.1.0",
+    "nodecredstash": "^2.0.2",
+    "npm-cli-login": "^0.1.1",
+    "npm-registry-client": "^8.6.0",
+    "react": "^16.12.0",
+    "serverless-jest-plugin": "^0.3.0",
+    "serverless-localstack": "^0.4.24",
+    "serverless-plugin-include-dependencies": "^4.0.1",
+    "socketio-jwt": "^4.5.0",
+    "yamljs": "^0.3.0"
+  }
 }
