--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -61,6 +61,7 @@ jobs:
             npx semantic-release
             git config --global user.email 'circleci@seamlesspay.com'
             git config --global user.name "CircleCi"
+            git add . 
             git commit -m 'up version'
             lerna publish
       # - run:
