--- a/lerna.json
+++ b/lerna.json
@@ -1,6 +1,4 @@
 {
-  "lerna": "2.5.1",
-  "version": "2.0.0",
   "useWorkspaces": true,
   "packages": [
     "functions/*",
@@ -8,10 +6,5 @@
     "services/*",
     "containers/*"
   ],
-  "command": {
-    "bootstrap": {
-      "loglevel": "verbose",
-      "reject-cycles": false
-    }
-  }
+  "version": "0.0.0"
 }
