--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -63,7 +63,7 @@ jobs:
             git config --global user.name "CircleCi"
             git add . 
             git commit -m 'up version'
-            lerna publish from-package -y
+            lerna exec 'npm publish'
       # - run:
       #     name: Adding Change Logs
       #     command: |
