--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -63,6 +63,7 @@ jobs:
             git config --global user.name "CircleCi"
             git add . 
             git commit -m 'up version'
+            npm config set _auth ${NPM_TOKEN}
             lerna publish from-package -y
       # - run:
       #     name: Adding Change Logs
